src/main/default/objects/TestDataFactory__c/TestDataFactory__c.object-meta.xml
<CustomObject>
    <label>Test Data Factory</label>
    <nameField>
        <label>Test Data Factory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Data Factories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>