src/main/default/objects/TestDataFactory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Data Factories</relationshipLabel>
    <relationshipName>TestDataFactories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>