src/main/default/objects/TestDataFactory__c/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <label>Date Field</label>
    <required>true</required>
    <type>Date</type>
</CustomField>