src/main/default/objects/TestDataFactory__c/fields/FieldWithValidationRule__c.field-meta.xml
<CustomField>
    <fullName>FieldWithValidationRule__c</fullName>
    <label>Field With Validation Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>