src/main/default/objects/TestDataFactory__c/fields/NotRequiredTextField__c.field-meta.xml
<CustomField>
    <fullName>NotRequiredTextField__c</fullName>
    <label>Not Required Text Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>