src/main/default/objects/TestDataFactory__c/validationRules/Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(FieldWithValidationRule__c) &lt; 10, NOT(ISBLANK(FieldWithValidationRule__c)))</errorConditionFormula>
    <errorDisplayField>FieldWithValidationRule__c</errorDisplayField>
    <errorMessage>The field should contain at least 10 characters</errorMessage>
</ValidationRule>